--- a/Accounts.csproj
+++ b/Accounts.csproj
@@ -67,4 +67,8 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0-preview.4" />
   </ItemGroup>
 
+<ItemGroup>
+  <Folder Include="wwwroot\js\Accounts\" />
+</ItemGroup>
+
 </Project>
